feat: Se implemento reporte administrativo :white_check_mark: :construction_worker:
